@@ -1,3 +1,4 @@
+- STREL-29 fix edge-case handling of overlapping indel candidate/forcedGT input
 - STREL-27 refactor indel candidacy to uniformly test all indel types
 - STREL-24 fix off-by-one error in test leading to extra candidate indel noise
 - STARKA-388 add ADF/ADR tags to gVCF output
